--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,6 @@
     "react-hooks/exhaustive-deps": "off",
     "react/no-unescaped-entities": "off",
     "prefer-const": "off"
-  }
+  },
+  "ignorePatterns": ["**/*"]
 }
