--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "jspdf-autotable": "^3.8.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "14.0.4",
     "next-themes": "^0.4.3",
     "papaparse": "^5.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.9",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
